--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ env:
 # Emulator Management: Create, Start and Wait
 script:
   - ./gradlew build jacocoTestReport assembleAndroidTest
-  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+  - echo no | android create avd --force -n test -t android-17 --abi armeabi-v7a
   - emulator -avd test -engine classic -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
