Adding codecov.io

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,4 @@ script:
   - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
   - ./gradlew connectedCheck
 after_success:
-  - bash <(curl -s https://codecov.io/bash)git status
+  - bash <(curl -s https://codecov.io/bash)
