--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ android {
         buildConfigField('String', 'OPENWEATHERMAP_API_KEY', open_weather_api_key)
     }
 
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+
     signingConfigs {
         debug {
             storeFile file("../keystore/chilindo.pks")
@@ -145,6 +149,9 @@ dependencies {
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
+
+    // Gson
+    testImplementation "com.google.code.gson:gson:2.8.2"
 }
 
 apply plugin: 'com.google.gms.google-services'
