Improve yml travis and codecov

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,9 @@ env:
 
 # Emulator Management: Create, Start and Wait
 script:
-  - ./gradlew clean assembleDebug assembleRelease testDebug testRelease createDebugUnitTestCoverageReport createReleaseUnitTestCoverageReport assembleAndroidTest
+  - ./gradlew clean assembleDebug assembleRelease testDebug createDebugUnitTestCoverageReport
 after_success:
   # Renaming folder and files of reports so codecov.io can find it
   - mv app/build/reports/jacoco/createDebugUnitTestCoverageReport app/build/reports/jacoco/jacocoTestDebugUnitTestReport
   - mv app/build/reports/jacoco/jacocoTestDebugUnitTestReport/createDebugUnitTestCoverageReport.xml app/build/reports/jacoco/jacocoTestDebugUnitTestReport/jacocoTestDebugUnitTestReport.xml
-  - mv app/build/reports/jacoco/createReleaseUnitTestCoverageReport app/build/reports/jacoco/jacocoTestReleaseUnitTestReport
-  - mv app/build/reports/jacoco/jacocoTestReleaseUnitTestReport/createReleaseUnitTestCoverageReport.xml app/build/reports/jacoco/jacocoTestReleaseUnitTestReport/jacocoTestReleaseUnitTestReport.xml
   - bash <(curl -s https://codecov.io/bash)
