--- a/app/build.gradle
+++ b/app/build.gradle
@@ -151,6 +151,9 @@ dependencies {
 
     // Gson
     testImplementation "com.google.code.gson:gson:2.8.2"
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
 }
 
 apply plugin: 'com.google.gms.google-services'
