Fix Sonarcloud Issue

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ after_success:
   # Codecov.io
   - bash <(curl -s https://codecov.io/bash)
   # Sonarcloud
-  - gradlew sonarqube -Dsonar.organization=gahfy-github -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=1c6764f4192f90bf97c604df1a644db97eaaaafe
+  - ./gradlew sonarqube -Dsonar.organization=gahfy-github -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=1c6764f4192f90bf97c604df1a644db97eaaaafe
