--- a/app/build.gradle
+++ b/app/build.gradle
@@ -142,8 +142,8 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
     // Firebase
-    implementation 'com.google.firebase:firebase-auth:11.8.0'
-    implementation 'com.google.android.gms:play-services-auth:11.8.0'
+    implementation 'com.google.firebase:firebase-auth:12.0.0'
+    implementation 'com.google.android.gms:play-services-auth:12.0.0'
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.6.1'
@@ -152,6 +152,7 @@ dependencies {
     // Gson
     testImplementation "com.google.code.gson:gson:2.8.2"
 
+    // Leak Canary
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
 }
