Remove warnings from utils package

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -171,6 +171,9 @@ dependencies {
     // Leak Canary
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
+
+    // Timber
+    implementation 'com.jakewharton.timber:timber:4.6.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
