--- a/app/build.gradle
+++ b/app/build.gradle
@@ -160,6 +160,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:11.8.0'
     //noinspection GradleDependency
     implementation 'com.google.android.gms:play-services-auth:11.8.0'
+    //noinspection GradleDependency
+    implementation 'com.google.firebase:firebase-appindexing:11.8.0'
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.6.1'
