--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ android {
 
     buildTypes {
         release {
-            debuggable true
+            debuggable false
             signingConfig signingConfigs.release
         }
 
